Added lis-opts configuration options for adding JAVA_OPTS (-Xmx, -Xms, etc), along with passing properties (-Djava.library.path, etc).